Reporte y comentarios del trabajo 3
Unidad 2

--- a/Actividad 3/tabla.html
+++ b/Actividad 3/tabla.html
@@ -1,49 +1,64 @@
+<!-- Declaración del tipo de documento -->
 <!DOCTYPE html>
+<!-- Inicio del documento HTML con idioma español -->
 <html lang="es">
 <head>
+    <!-- Configuración de caracteres a UTF-8 para soportar caracteres especiales como tildes y eñes -->
     <meta charset="UTF-8">
+    <!-- Configuración del viewport para hacer el diseño responsivo y adaptable a distintos dispositivos -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Enlace a la hoja de estilos externa para aplicar diseño a la página -->
     <link rel="stylesheet" href="estilos/estilos.css">
+    <!-- Título de la página que aparece en la pestaña del navegador -->
     <title>Tablas Combinadas</title>
 
 </head>
 <body>
+    <!-- Encabezado principal de la página -->
     <h1>Tabla de Ejemplo</h1>
+    <!-- Inicio de la primera tabla con información de personas -->
     <table>
+        <!-- Primera fila con encabezados de columna -->
         <tr>
-            <th>Nombre</th>
-            <th>Edad</th>
-            <th>Ciudad</th>
+            <th>Nombre</th> <!-- Encabezado para los nombres -->
+            <th>Edad</th> <!-- Encabezado para las edades -->
+            <th>Ciudad</th> <!-- Encabezado para las ciudades -->
         </tr>
+        <!-- Segunda fila con datos de una persona -->
         <tr>
-            <td>Ana</td>
-            <td>30</td>
-            <td>Madrid</td>
+            <td>Ana</td> <!-- Nombre -->
+            <td>30</td> <!-- Edad -->
+            <td>Madrid</td> <!-- Ciudad -->
         </tr>
+        <!-- Tercera fila con datos de otra persona -->
         <tr>
-            <td>Juan</td>
-            <td>25</td>
-            <td>Barcelona</td>
+            <td>Juan</td> <!-- Nombre -->
+            <td>25</td> <!-- Edad -->
+            <td>Barcelona</td> <!-- Ciudad -->
         </tr>
     </table>
     
+    <!-- Segundo encabezado de la página -->
     <h2>Horario</h2>
+    <!-- Inicio de la segunda tabla con un horario -->
     <table>
+        <!-- Primera fila con encabezados de columna -->
         <tr>
-            <th>Hora</th>
-            <th>Lunes</th>
-            <th>Martes</th>
-            <th>Miércoles</th>
-            <th>Jueves</th>
-            <th>Viernes</th>
+            <th>Hora</th> <!-- Encabezado para las horas -->
+            <th>Lunes</th> <!-- Encabezado para el lunes -->
+            <th>Martes</th> <!-- Encabezado para el martes -->
+            <th>Miércoles</th> <!-- Encabezado para el miércoles -->
+            <th>Jueves</th> <!-- Encabezado para el jueves -->
+            <th>Viernes</th> <!-- Encabezado para el viernes -->
         </tr>
+        <!-- Fila con horario y materias correspondientes -->
         <tr>
-            <td>11:00-13:00</td>
-            <td>Redes de Computadoras</td>
-            <td></td>
-            <td>Redes de Computadoras</td>
-            <td>Lenguajes y Autómatas I</td>
-            <td></td>
+            <td>11:00-13:00</td> <!-- Horario -->
+            <td>Redes de Computadoras</td> <!-- Materia del lunes -->
+            <td></td> <!-- Sin materia el martes -->
+            <td>Redes de Computadoras</td> <!-- Materia del miércoles -->
+            <td>Lenguajes y Autómatas I</td> <!-- Materia del jueves -->
+            <td></td> <!-- Sin materia el viernes -->
         </tr>
         <tr>
             <td>12:00-14:00</td>
@@ -54,21 +69,27 @@
             <td>Lenguajes y Autómatas I</td>
         </tr>
         <tr>
+            <!-- Horas -->
             <td>13:00-15:00</td>
+            <!-- Materia -->
             <td>Ingeniería de Software</td>
             <td></td>
+            <!-- Materias -->
             <td>Programación Web</td>
             <td>Administración de Bases de Datos</td>
             <td>Redes de Computadoras</td>
         </tr>
+        <!-- Horas -->
         <tr>
-            <td>14:00-15:00</td>
+            <td>14:00-15:00</td>  
             <td></td>
             <td></td>
             <td></td>
             <td></td>
+            <!-- Materia -->
             <td>Ingeniería de Software</td>
         </tr>
+        <!-- Horas y materia -->
         <tr>
             <td>15:00-17:00</td>
             <td>Programación Web</td>
@@ -94,5 +115,7 @@
             <td></td>
         </tr>
     </table>
+    <!-- Fin del cuerpo de la página -->
 </body>
+<!-- Fin de pagina -->
 </html>
