--- a/Ejercicio Botones/index.html
+++ b/Ejercicio Botones/index.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> <!-- Define el tipo de documento y el idioma de la página -->
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> <!-- Configuración de codificación de caracteres -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <!-- Enlace a la biblioteca de iconos Font Awesome para usar iconos en los botones -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Botones</title>
+    <!-- Configuración para hacer la página responsiva en dispositivos móviles -->
+    <link rel="stylesheet" href="styles.css"> <!-- Enlace a la hoja de estilos externa -->
+    <title>Botones</title> <!-- Título de la página -->
 </head>
 <body>
 
-<button class="basic-button-p">Botón Básico 1</button>
-<button class="basic-button-">Botón Básico 1</button>
-<button class="basic-button">Botón Básico 2</button>
-<button class="icon-button"><i class="fas fa-thumbs-up"></i> Me Gusta</button>
-<button class="animated-button">Botón con Animación</button>
-<button class="fancy-button"><i class="fas fa-star"></i> Botón Elegante</button>
-<button class="round-button">R</button>
-<button class="semi-round-button">Botón Semi Redondo</button>
-<button class="Long-button">Botón Largo</button>
-<button class="short-button">Corto</button>
-<button class="extreme-round-button">Redondeado Extremo</button>
-    
+    <!-- Botones básicos con diferentes clases para personalización en CSS -->
+    <button class="basic-button-p">Botón Básico 1</button>
+    <button class="basic-button-">Botón Básico 1</button>
+    <button class="basic-button">Botón Básico 2</button>
+    <!-- Botón con icono de "Me Gusta" utilizando Font Awesome -->
+    <button class="icon-button"><i class="fas fa-thumbs-up"></i> Me Gusta</button>
+    <!-- Botón con animación al hacer clic -->
+    <button class="animated-button">Botón con Animación</button>
+    <!-- Botón elegante con un icono de estrella -->
+    <button class="fancy-button"><i class="fas fa-star"></i> Botón Elegante</button>
+    <!-- Botón redondo con una sola letra -->
+    <button class="round-button">R</button>
+    <!-- Botón semi redondo con esquinas suavizadas -->
+    <button class="semi-round-button">Botón Semi Redondo</button>
+    <!-- Botón con un tamaño más largo -->
+    <button class="Long-button">Botón Largo</button>
+    <!-- Botón más corto en tamaño -->
+    <button class="short-button">Corto</button>
+    <!-- Botón con extremos altamente redondeados -->
+    <button class="extreme-round-button">Redondeado Extremo</button>
+
 </body>
 </html>
